tests/Rules/Structure/Fixtures/invalid/anchor_inside_button.html.twig
{# 1 errors #}
<button type="button">
  <a href="/home">Go home</a>
</button>
